trunk

* Added support for tile instance properties (by Christian Henz)
* Added ability to create stamp brushes from the tile palette
* Added import/export of configuration
* Embedded the tile palette
* Report out of memory error when saving map as image
* Properties table now displays the properties in alphabetical order
* Fixed properties dialog to also save values that were still being edited
* Fixed automatically adding the file extension when not given
* Worked around an issue with the open file dialog on GNU classpath
* Worked around an issue with setting a null cursor on GNU classpath

0.6.1 - July 15th, 2006

* Fixed creation of one-tile gaps between tilesets on saving (Christian Henz)
* Fixed failing to default to map format by extention when plugins are loaded
* Fixed active marquee not being reset on loading a map
* Fixed layer duplicates to not share layer properties with the original
* Fixed width of tile button changing between selecting a tile and no tile
* Fixed the add-tile button being disabled in the case of empty tilesets

0.6.0 - June 23rd, 2006

* Added internationalization, with translations to Dutch, German, Italian,
  French and Spanish
* Added stamp function for pencil: right-click, drag now creates a stamp
  for easy copying
* Added more error-checking to XMLMapTransformer, the default map reader
* Added global properties for tilesets (properties set for all tiles)
* Added the ability to merge tile images when layers are merged
* Added more useful visual feedback for some brushes
* Added remembering of main window state as suggested by Dennis Spreen
* Added remembering of size and divider position to tile palette dialog
* Added memory usage display and a garbage collect button to the about dialog
* Added JSON exporter plugin by Nader Akhres
* Improved memory usage and speed in several areas
* Fixed new tileset dialog so that it is now possible to change the tile height
  to something other than the tile height used by the map