@@ -112,6 +112,7 @@ dialog.preferences.grid.tab=Grid
 dialog.preferences.layer.options.title=Layer Options
 dialog.preferences.opacity.label=Opacity:
 dialog.preferences.report.io.warnings.checkbox=Report I/O messages
+dialog.preferences.report.io.autoopenlast.checkbox=Automatically open last file on startup
 dialog.preferences.saving.tab=Saving
 dialog.preferences.tileset.options.title=Tileset Options
 dialog.preferences.title=Preferences
