@@ -3,6 +3,7 @@ trunk
 * Added support for tile instance properties (by Christian Henz)
 * Added ability to create stamp brushes from the tile palette
 * Added import/export of configuration
+* Added option to automatically open the last map on startup (by Pedro Miller)
 * Embedded the tile palette
 * Report out of memory error when saving map as image
 * Properties table now displays the properties in alphabetical order
